Bug 1563854 - Restrict Nvidia blocklist entry to the proprietary driver. r=aosmond a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D37672

--HG--
extra : source : 3d07024e39d94ee2a1e52acdb88b6b8ac1bb1a8b